--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Datos del equipo</title>
 <!--grupo CSS-->
-<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css"/>
+<link rel="stylesheet" href="css/temaapp1.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css"/>
 <link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css"/>
 
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-<div data-role="page" id="principal" data-theme="b">
+<div data-role="page" id="principal" data-theme="a">
   <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
      <h1>Datos del Dispositivo</h1>
   </div>
